--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,37 @@
     padding: 10px;
     width: 300px;
 }
+* {
+    margin:0%
 
+}
 
 .tag {
     background-color: red;
     height: 200px;
     border-radius: 10px;
     display: grid;
-    grid-template-rows: 15% 15% 60% 10%;
     color: white;
     text-align:center;
+    padding: 1px;
 }
-p {
+.kibby {
     background-color: white;
     color: black;
+    font-family: 'Allison', cursive;
+    font-size: 35px;
+    font-weight: bold;
+    height: 50px;
+}
 
+h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    padding: 1px;
+   
+}
+h2 {
+    padding: 1px;
+    line-height: 50%
 }
